--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <html>
-            <head>
-        <title>My awesome web page</title>
-       </head>
+ <head>
+             <title> This awsome site </title>
+ </head>
   <body>
     Hello there, awesome person! 
   </body>
