--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
- <head>
-             <title>This awsome site</title>
- </head>
-  <body>
-    Hello there, awesome person! 
-  </body>
+    <head>
+        <title>I am a title!</title>
+    </head>
+
+    <body>
+        Some content.
+    </body>
 </html>
