--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <body>
         <h1> this is a header </h1>
+        
         Some content.
+        <img src="https://octodex.github.com/images/vinyltocat.png">
     </body>
 </html>
