--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         
         Some content.
         <img src="https://octodex.github.com/images/vinyltocat.png">
+        <ul> <li> dig a hole </li> </ul>
     </body>
 </html>
