--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         
         Some content.
         <img src="https://octodex.github.com/images/vinyltocat.png">
-        <ul> DIG </ul>
-        <ul> a </ul>
-        <ul> hole </ul>
+        <ul><li> DIG </li>
+            <li> a </li>
+            <li> hole </li> 
+        </ul>
     </body>
 </html>
