--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul><li> DIG </li>
             <li> a </li>
             <li> hole </li> 
+            <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
         </ul>
     </body>
 </html>
